# atrium-grounds

./: .gitignore  README.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/prompts/: orient.prompt.md
.github/workflows/: ci.yml
.specify/memory/: agent-meta-commands.md  collaboration-addon-guide.md  constitution.md  git-worktrees-protocol.md  key-web-dev-principles.md  orientation-reference.md  pr-workflow-guide.md
.specify/templates/: plan-template.md
scripts/: validate-tdd-gate.sh
services/observatory/: .env.example  .gitignore  Dockerfile  FEATURE-001-CHECKPOINT.md  GETTING-STARTED.md  README.md  VALIDATION.md  WORKFLOW.md  docker-compose.yml  fix-encoding-final.ps1  pyproject.toml  quick-start.ps1  run_clean_server.py  run_server.py
services/observatory/app/: __init__.py  main.py
services/observatory/app/api/v1/: __init__.py  analyze.py  batch.py  examples.py  health.py
services/observatory/app/core/: __init__.py  analyzer.py  config.py  dev_keys.py  export.py  jobs.py  log_config.py  logging.py  notifications.py  queue.py  validator.py  worker.py
services/observatory/app/middleware/: __init__.py  auth.py  ratelimit.py
services/observatory/app/models/: __init__.py  database.py  schemas.py
services/observatory/docs/: CLEAN-LOGGING.md  MIGRATION-002.md  NEXT-STEPS.md  VALIDATION-CHECKLIST-002.md  VERBOSITY-PLAN.md
services/observatory/docs/archive/: LINTING.md  README.md  TEST-FILTERING.md
services/observatory/docs/guides/: ENCODING-GUIDE.md  README.md
services/observatory/examples/: collaborative-problem-solving.txt  dialectic-exchange.txt  emotional-support.txt  manifest.json  philosophical-inquiry.txt  technical-assistance.txt
services/observatory/scripts/: BUGFIXES.md  README.md  performance-validation.ps1  test-dx-features.ps1  validation.ps1
services/observatory/tests/: README.md  VALIDATION.md  __init__.py  conftest.py
services/observatory/tests/contract/: __init__.py  test_analyze_batch.py  test_analyze_cancel.py  test_analyze_get.py  test_analyze_post.py  test_examples.py  test_examples_get.py
services/observatory/tests/integration/: test_analysis_flow.py  test_auth_public.py  test_webhooks.py
services/observatory/tests/unit/: test_analyzer.py  test_auth.py  test_database.py  test_export.py  test_jobs.py  test_queue.py  test_ratelimit.py  test_ttl.py  test_validator.py
services/web-interface/: .env.example  Dockerfile  IMPLEMENTATION.md  README.md  pyproject.toml
services/web-interface/app/: client.py  config.py  main.py
services/web-interface/app/routers/: examples.py  pages.py  proxy.py
services/web-interface/app/static/css/: style.css
services/web-interface/app/static/examples/: debate-simple.json
services/web-interface/app/templates/: base.html  demo.html  docs.html  index.html
services/web-interface/app/templates/components/: nav.html  status.html
services/web-interface/scripts/: generate_examples.py
services/web-interface/tests/: test_examples.py  test_integration.py  test_pages.py  test_proxy.py
specs/: 003-spec-kit-enhancements.md  004-quickstart-refactor.md  005-adjust-api-key-limits.md  CI-ISSUES-ANALYSIS.md  TECH-DEBT-AUDIT-2025-10-06.md
specs/001-atrium-observatory-service/: plan.md  spec.md  tasks.md
specs/002-developer-experience-upgrades/: FEATURE-002-STATUS.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+60 files in other folders)
