[project]
name = "atrium-web-interface"
version = "0.1.0"
description = "Public web interface for Atrium Grounds Observatory API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.5",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]
